--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Engergy Business Model Guide</title>
+	<title>Fit to Serve</title>
 
 	<!-- viewport -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="author" content="Lezhi Su">
 
 	<!-- font -->
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -134,8 +135,8 @@
 				<p class="section-brief">
 					We organize off-line meetings and workshops. We offer toolkits and cases. You can click to know more about them.			
 				</p>
-				<div class="row option-container">
-					<div class="col-md-3 col-sm-6 option-col">
+				<div class="option-container">
+					<div class="option-col">
 						<img class="option-icon" src="img/option-workshop.png">
 						<h2 class="para-title">
 							Offline Workshop
@@ -149,7 +150,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-6 option-col">
+					<div class="option-col">
 						<img class="option-icon" src="img/option-meet.png">
 						<h2 class="para-title">
 							Meet Others
@@ -163,7 +164,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-6 option-col">
+					<div class="option-col">
 						<img class="option-icon" src="img/option-tools.png">
 						<h2 class="para-title">
 							Toolkit Download
@@ -177,11 +178,11 @@
 							</a>
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-6 option-col">
+					<div class="option-col">
 						<img class="option-icon" src="img/option-cases.png">
 						<h2 class="para-title">
 							Inspiring Cases
-						</h2>
+						</h2>	
 						<p class="para">
 							The work of the DSM Technology Collaboration Program is organised through a series of Tasks and reported in a number of publications. It is managed by an Executive Committee (ExCo). Visit the News page for the latest information on our activities.
 						</p>
@@ -191,43 +192,164 @@
 							</a>
 						</div>
 					</div>
-					<!-- <div style="clear:both"></div> -->
+					<div class="clear"></div>
 				</div>	
 			</div>
 			
 		</section>
 		<section class="gray-bg" id="contact">
-			<div class="row">
-				<div class="col-sm-3">
-					<a href="http://www.ieadsm.org/">
-						<img src="img/ieadsm-logo.png">
-					</a>
-				</div>
-				<div class="col-sm-9">
-					<h2 class="para-title">
-						About us
-					</h2>
-					<p class="para">
-						IEA Demand Side Management Energy Efficiency Technology Collaboration Program (DSM TCP)  is an international collaboration of 15 countries and 3 sponsors working together to develop and promote opportunities for demand-side management (DSM). DSM offers solutions to problems such as load management, energ·y efficiency, strategic conservation and related activities.
-					</p>
-					<p class="para">
-						Find us through:
-					</p>
-					<ul>
-						<li>
-							<img src="img/social-twitter.png">
+			<div class="content-container">
+				<h2 class="sub-title">CONTACT US</h2>
+				<hr class="sub-title-hr">
+				<div class="contact-wrap">
+					<div class="about-us">
+						<div id="contact-logo">
+							<a href="http://www.ieadsm.org/" target="_blank">
+								<img src="img/contact-logo.png">
+							</a>
+						</div>
+						<div id="ieadsm-intro">
+							<h2 class="para-title">
+								About Us
+							</h2>
+							<p class="para">
+								IEA Demand Side Management Energy Efficiency Technology Collaboration Program (DSM TCP)  is an international collaboration of 15 countries and 3 sponsors working together to develop and promote opportunities for demand-side management (DSM). DSM offers solutions to problems such as load management, energ·y efficiency, strategic conservation and related activities.
+							</p>
+						</div>
+						<div class="clear">
+						</div>
+					</div>
+					<ul class="contact-list">
+						<li class="countries">
+							<h2 class="para-title">
+								The Netherlands
+							</h2>
+							<p class="para">
+								<b>Dr. Ruth Mourik</b> <br>
+								Eschweilerhof 57 <br>
+								5625 NN Eindhoven <br>
+								The Netherlands <br>
+								<b>Telephone:</b> +31 40 2425683 <br>
+								<b>Mobile:</b> +31 6 25075760 <br>
+								<b>E-mail:</b> info@duneworks.nl
+							</p>
 						</li>
-						<li>
-							<img src="img/social-facebook.png">
+						<li class="countries">
+							<h2 class="para-title">
+								The Netherlands
+							</h2>
+							<p class="para">
+								<b>Renske Bouwknegt</b> <br>
+								<i>Ideate</i><br>
+								Kleine Koppel 16 <br>
+								3812 PH Amersfoort <br/>
+								<b>Mobile:</b>  (+31) 38 89 1557 <br>
+								<b>E-mail:</b> renske@ideate.nl <br/><br/>
+							</p>
 						</li>
-						<li>
-							<img src="img/social-youtube.png">
+						<li class="countries">
+							<h2 class="para-title">
+								The Netherlands
+							</h2>
+							<p class="para">
+								<b>Dr. Boukje Huijben</b> <br>
+								Strategic Area Energy<br>
+								Eindhoven University of Technology<br>
+								P.O. Box 513 <br/>
+								5600 MB Eindhoven <br>
+								<b>E-mail:</b> J.C.C.M.Huijben@tue.nl <br/><br/>
+							</p>
 						</li>
-						<li>
-							<img src="img/social-slideshare.png">
+						<li class="countries">
+							<h2 class="para-title">
+								Austria
+							</h2>
+							<p class="para">
+								<b>DI Mr Reinhard Ungerböck</b> <br>
+								Grazer Energieagentur GmbH<br>
+								Kaiserfeldgasse 13<br>
+								8020 Graz<br>
+								<b>Mobile:</b> (43) 316 811 848 17<br>
+								<b>Telefax:</b> (43) 316  811 848 9 <br>
+								<b>E-mail:</b> ungerboeck@grazer-ea.at
+							</p>
 						</li>
+						<li class="countries">
+							<h2 class="para-title">
+								European Copper Institute
+							</h2>
+							<p class="para">
+								<b>Mr Hans De Keulenaer</b> <br>
+								<i>European Copper Institute</i><br>
+								Avenue de Tervueren 168, b-10 <br>
+								1150 Brussels <br>
+								Belgium <br>
+								<b>Telephone:</b> (32) 2 777 7084 <br>
+								<b>Telefax:</b> 832) 2 777 7079 <br>
+								<b>E-mail:</b> hans.dekeulenaer@opperalliance.eu
+							</p>
+						</li>
+						<li class="countries">
+							<h2 class="para-title">
+								Norway
+							</h2>
+							<p class="para">
+								<b>Even Bjornstad</b> <br>
+								<i>Enova SF</i> <br>
+								Postboks 5700 Sluppen <br>
+								N-7437 Trondheim <br>
+								<b>Telephone:</b> 0047996382180 <br>
+								<b>E-mail:</b> even.bjornstad@enova.no <br/><br/> <br/>
+							</p>
+						</li>
+						<li class="countries">
+							<h2 class="para-title">
+								Sweden
+							</h2>
+							<p class="para">
+								<b>Ms Lotta Bångens</b> <br>
+								Senior Consultant <br>
+								Aton Teknikkonsult AB <br>
+								St. Göransgatan 84 <br>
+								112 38 Stockholm <br>
+								<b>Telephone:</b> (46) 8 747 8698 <br>
+								<b>Mobile:</b> (46) 70 343 9212 <br>
+								<b>E-mail:</b> lotta.bangens@aton.se <br>
+							</p>
+						</li>
+						<li class="countries">
+							<h2 class="para-title">
+								Switzerland
+							</h2>
+							<p class="para">
+								<b>Ms Marine Beaud</b> <br>
+								Energy Supply and Monitoring, Specialist <br>
+								Swiss Federal Office of Energy, OFEN <br>
+								CH-3033 Bern <br>
+								<b>Telephone:</b> (41) 58 46 22536 <br>
+								<b>Telefax:</b> (41) 46 32500 <br>
+								<b>E-mail:</b> marine.beaud@bfe.admin.ch <br/> <br/>
+							</p>
+						</li>
+						<li class="countries">
+							<h2 class="para-title">
+								South Korea
+							</h2>
+							<p class="para">
+								<b>Professor Suduk Kim</b> <br>
+								Department of Energy Systems Research<br>
+								Ajou University<br>
+								St. Göransgatan 84 <br>
+								112 38 Stockholm <br>
+								<b>Telephone:</b> 82312192689 <br>
+								<b>Fax:</b> 82 31 219 2208 <br>
+								<b>E-mail:</b> suduk@ajou.ac.kr <br>
+							</p>
+						</li>
+						<li class="clear"></li>
 					</ul>
 				</div>
+					
 			</div>
 		</section>
 	</div>
